--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
