--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.0",
