--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.10",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
@@ -43,6 +44,7 @@
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
