--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-table": "^7.8.0",
     "remeda": "^2.21.0",
     "sharp": "^0.33.5",
     "sonner": "^2.0.1",
@@ -60,6 +61,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-table": "^7.7.20",
     "cypress": "^14.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
