--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "15.1.7",
+    "next-qrcode": "^2.5.1",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.0",
     "react": "^18.3.1",
