--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-table": "^7.8.0",
+    "recharts": "^2.15.2",
     "remeda": "^2.21.0",
     "sharp": "^0.33.5",
     "sonner": "^2.0.1",
