--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "cypress": "^14.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "otplib": "^12.0.1",
     "postcss": "^8",
     "prettier": "3.5.2",
     "tailwindcss": "^3.4.1",
